--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,14 @@
   color: red;
   background: rgb(0, 255, 13);
  }
+
+ .button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
