--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -21,7 +22,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(114, 32, 32);
 }
 
 .App-link {
@@ -42,14 +43,14 @@
   text-align: center;
   width: 3em;
   font-size: 2em;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgb(64, 101, 247);
   margin: 1em;
   user-select: none;
  }
 
  .activeCard {
-  color: red;
-  background: rgb(0, 255, 13);
+  color: rgb(255, 255, 255);
+  background: rgb(0, 85, 255);
  }
 
  .button {
@@ -61,4 +62,21 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+}
+
+.background{
+  background-color: #a0c7fa;
+  color:rgb(255, 0, 0);
+  
+}
+
+.box{
+  margin: auto;
+  max-width: 900px;
+  height: 600px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
